--- a/clients/package.json
+++ b/clients/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
